tests/diag/syntax-eq-vs-assign.wisp
surface bar {
  widget clock {
    text == "hi";
  }
}
